add config or something